--- a/index.html
+++ b/index.html
@@ -529,7 +529,32 @@
         { name: 'Kim', address: 'ban_3471asn15tb5q6ins6qj7nd9hszqnaotpmq4jpjpk6u334j7dh76n45rifqs' },
         { name: 'RoddCM', address: 'ban_1e5y6aojkcau94zdo1gh5gj9hgwqrdtb8f1e58m4dbxqmyqjany51ghybu54' },
         { name: 'phamvuduycuong', address: 'ban_3weqz8nwj4wwu4i4x61cdyrcd4jiqfuhtku59c3fpgjqdz6fzubocnc5bwbo' },
-        { name: 'Formatted', address: 'ban_3to8dujhsyua1jq9stu1651i4qiwyh43m8iik335xmei9dmrr6k4z6af3idq' }
+        { name: 'Formatted', address: 'ban_3to8dujhsyua1jq9stu1651i4qiwyh43m8iik335xmei9dmrr6k4z6af3idq' },
+        { name: '@caputcapit', address: 'ban_3ran4mqccaqdjeopecqf8bgqfqiu74xdosobk4q77rhpdxibp79d1c5cs8et' },
+{ name: 'Adan', address: 'ban_3ag75ow7wkjwg8hoffn49agm3tyazkf5xotacqto395ob7yx7br8dygd3bf8' },
+{ name: 'ban_1an13ui7jg33se3tn4t1ms8yxd6jo1yeguwb58hxe1d8mg3gjcxjruokco8w', address: 'ban_1an13ui7jg33se3tn4t1ms8yxd6jo1yeguwb58hxe1d8mg3gjcxjruokco8w' },
+{ name: '@Kin1969', address: 'ban_333mhgx9hbujnhfy6498cmb97neudng971p1aduose8aeco55iy7zpid4tc7' },
+{ name: 'Viper_4226', address: 'ban_1mw83gna51te8azm7uookqmmphxnk5g1ofr4ptz9hthmkp3h9kseeitdf3xs' },
+{ name: 'ez', address: 'ban_34gebx7fnbxf6qzme48uaqbmpyt9pq4ogeftchxe6c7oqorw9i6tfjtfns47' },
+{ name: 'zelimq', address: 'ban_3bjyj4b37715dexet4nfgdobbdzh1cfnzzz5ctnbz8n4zb3mdysum4mz7xuj' },
+{ name: 'David Scubadiver', address: 'ban_1fejr3pa5ctjf4iookszqgazy8bzxh171abhxjxuf6w5kwt719kj1kpk331c' },
+{ name: 'Flightless_Pig', address: 'ban_1kya9zz3z37645mbtyu6mcxoktpxeoh7bfkefs41zijewmhd3qg9f56cfhup' },
+{ name: 'Rah', address: 'ban_1nicqgmwewhhk631fudjegttqhb5n156dm6ncc6mg7hmnrokyc6p3qjoey67' },
+{ name: 'SimonNano', address: 'ban_39zpn7aiqwwprua89oyejw1wizbkurp74ucpdtcj1gbueicw74hieoiihr58' },
+{ name: '@shentran', address: 'ban_3soexwk4agw1ecmu79jogoticnair7uqf1aw7yw9eyqnmg81cni8g1nqacnu' },
+{ name: '@shentran', address: 'ban_3a6and5qqj31nojjz16bhxochgy1hptzbzowfns5gb4p51xhsqscjxkg3qkk' },
+{ name: 'Johjimnoh', address: 'ban_3a4qdm4hposdg3k5fd4kzw5ba93yx731xo64qferwyoh1zg6wc9oj8suqyq3' },
+{ name: 'gruvious', address: 'ban_3jzin7rztecrjb33cxdruinfbb75s669seaqj3iticb3spw4wkbjp4xkjdjq' },
+{ name: 'corduroy_pillows', address: 'ban_11knjmwysyt7p1gpecwdx13u9u9cw9aagytzkuikr8uy4w5ef5zdugj14mt7' },
+{ name: 'Fallen_lucier or Lucier Baal #8274', address: 'ban_3fb5tqjgqk8o9yft5zfr8knni3x36chea3ij1hdug1urf68p19wezzi8pzcu' },
+{ name: 'otomatis', address: 'ban_1ouon4rg8fcdbtqmmx5zw9ha4141eiwhckexh76i1nhhxsjwbyxfjwoxzcn8' },
+{ name: 'gabriel ponzo', address: 'ban_3i873fug4wkm9ipok11mnt3f79d8ma4c96khnajtoub157iapkmbhb75stnk' },
+{ name: 'nooa sarkkinen / noupadi / noupadi', address: 'ban_3b13wysi9uajc5n65ejx1d545ftbnn37n8awpowzpah3mr9fbskn4y6bzbk8' },
+{ name: 'nooa sarkkinen', address: 'ban_3b13wysi9uajc5n65ejx1d545ftbnn37n8awpowzpah3mr9fbskn4y6bzbk8' },
+{ name: 'Ram-Z', address: 'ban_3sno4fkywaru889xpi9t9wq6mux94a9qr5g83ao7gf9ud6egmx6wthbj1h6u' },
+{ name: 'Plumptonramsey', address: 'ban_3sno4fkywaru889xpi9t9wq6mux94a9qr5g83ao7gf9ud6egmx6wthbj1h6u' },
+{ name: '@Cristian75131', address: 'ban_3r1igg3o7n3hws8wbn66s7wdcxqcsdkqpis99gsa454e5y5ncu7arugd5ms5' },
+{ name: '@ngan123 / thungan / lethanhhung77', address: 'ban_3rcinqdwgk1tf15szxko3pfhin6as36jjcxk88w774pfx1b1qkiprymnbry5' }
       ]
     }
   })
