--- a/index.html
+++ b/index.html
@@ -562,6 +562,15 @@
         { name: 'QKoplo#9013', address: 'ban_38aj6yzyt485i8qzkb8h1mewawhf1cdq7dnjnog14gnq5yt7moenp7ow5yd3' },
         { name: '@Noodles_Me', address: 'ban_3noodsfumnb3ihchnkcso1ufazxccjc6x1gtbcits9euei89a7qw9b8nubum' },
         { name: 'Welo', address: 'ban_1cowcowypypjbhxbhmmcwmuurh8hnx45ycb36489zrxpq8e7fja5k1f19t59' },
+        { name: '@jancisneros2', address: 'ban_3arxc9d3kpeh58ahxyrjdoutcmrfz6ryofxx9a63jqzm6kjccrk5g666wkjk' },
+        { name: 'moonrockets', address: 'ban_3uc6cuq3isapnkb4jo8e5jpjjpceq8akw75ersh4nhpx9prd4kmtmtwygsyi' },
+        { name: 'Justin Murphy', address: 'ban_3rnono6w9gnji65dojb9qn8ynx154j6m37zoscp738g1fdegkek7uscdq1jr' },
+        { name: 'Total confused banano', address: 'ban_3rnono6w9gnji65dojb9qn8ynx154j6m37zoscp738g1fdegkek7uscdq1jr' },
+        { name: 'Kenshin Himura', address: 'ban_3471asn15tb5q6ins6qj7nd9hszqnaotpmq4jpjpk6u334j7dh76n45rifqs' },
+        { name: '@snkstreet', address: 'ban_374q1s3m4ggmmxjs87w8san4d1s9c4xii8k8jgwm98wi8hkfu6zii9gcgfq3' },
+        { name: 'Effy', address: 'ban_1kdonsbj8oww3iakxffsmq3wfxdyp5t9g3f88zmd4mkorqi8mrsgfku115j6' },
+        { name: 'Bananatic.Minions', address: 'ban_1846uukkmk8ss54kdqo9eq4a9f67p4ugij3fb1hxjhpr5nggqhzn3tcymf9w' },
+        { name: 'Tiffani!', address: 'ban_34rqryp63dyerxumcqe6f3pxifkbnh8ernss6dnqs96aqjnokpqx5ne7oouy' },
       ]
     }
   })
