--- a/index.html
+++ b/index.html
@@ -571,6 +571,23 @@
         { name: 'Effy', address: 'ban_1kdonsbj8oww3iakxffsmq3wfxdyp5t9g3f88zmd4mkorqi8mrsgfku115j6' },
         { name: 'Bananatic.Minions', address: 'ban_1846uukkmk8ss54kdqo9eq4a9f67p4ugij3fb1hxjhpr5nggqhzn3tcymf9w' },
         { name: 'Tiffani!', address: 'ban_34rqryp63dyerxumcqe6f3pxifkbnh8ernss6dnqs96aqjnokpqx5ne7oouy' },
+        { name: '@CryptoReyna / arkadio666 / arkadio666', address: 'ban_3qomkp1wrrqyupaw58hdign84dms6ybrgejeyimjhokn7rey1qy5qm73fj31' },
+        { name: '@bansocialclub', address: 'ban_1b9g3h938ecnkj7u8furmpw64115jyrhxixdt5c6im7r6p3he97615fpzwpw' },
+        { name: 'manpan', address: 'ban_388pj57iqcpy5dojxg31bapxuknue913mu9btb5h9439fh7fjjres8sa6bfe' },
+        { name: 'xRam0s', address: 'ban_36g5kaq6geakcrdbuazqj4pw9gsyknn1rofu4rize7qa5937bagbh6dy4owt' },
+        { name: 'GMontero#1667', address: 'ban_1wkpddrsxekrrnji1j1bc9kgaf78qumomgigomo4st4pdth7jd8jjzhhs3bo' },
+        { name: 'Angelita #9157', address: 'ban_3fqfgso9chf8jug8rgq3kunmcg3fwts7tuosow9dp1tjnqm9fxurx3jwyms9' },
+        { name: '@Alri_17', address: 'ban_3jfn6w1qbgpo5zmozit78jiwq715ytcb6z6n7dt1ud5b5sgs6y4g3zshnkpg' },
+        { name: 'Victor Vázquez', address: 'ban_38f5tcw6mtmg6cqqppa19fz1gnr4i8fuqhfjk8tkf597959w4qgbzgjn55kd' },
+        { name: 'Super betta fish', address: 'ban_16sk96p43x6rfrxzr9d6399fxnqeimk4hjdps3q65nrdd73m53tfrz8f4wyu' },
+        { name: 'Léo', address: 'ban_3ob6gd8q1yspdcx4woay745mqx9kss8fqk53iebsgz7375n3buogjkms389r' },
+        { name: 'vikhyath', address: 'ban_3ntaa6f4i4qq9e1zkoyb4as1o3dqahg3d6pfbs1f55j8658pz7dbs4idz6rg' },
+        { name: '@⚡Rampage⚡#7133', address: 'ban_3i3audtajq1bwhqsj64ocxo4bwy6rxjzqtu5tooj5zijquhoj1ccht6e5whs' },
+        { name: '@jbrice2 @jbrice#2496 jbrice2', address: 'ban_1fg8csogskgsq48gh35ciaybomrwtjy9eayngbspp8jbgj6asnth6r8aqyjx' },
+        { name: '*Periquito#8194', address: 'ban_3ejokjcq3rogzz61rd41uwmu817om581z8ffbwipbxmxk6cj9rmtfcy798to' },
+        { name: '¡Madelino!#7918', address: 'ban_19h5est3px5izmkw5dmr8h3xnizormtax5mbffa4etc51nwt6c9cr3pgarsy' },
+        { name: '@minato77/jay31#7887/Maspowertaken', address: 'ban_3t4ednmewujsqr76wjnkfwfa7ds4rt1uyq5f8bkoeo33eodhdum9ymyroatd' },
+        { name: 'CORI', address: 'ban_1tboctbbkyd1b57wabigqdhfadbroszxn4w5gb36axat4r36z3rogosg5gfn' },
       ]
     }
   })
