--- a/index.html
+++ b/index.html
@@ -588,6 +588,11 @@
         { name: '¡Madelino!#7918', address: 'ban_19h5est3px5izmkw5dmr8h3xnizormtax5mbffa4etc51nwt6c9cr3pgarsy' },
         { name: '@minato77/jay31#7887/Maspowertaken', address: 'ban_3t4ednmewujsqr76wjnkfwfa7ds4rt1uyq5f8bkoeo33eodhdum9ymyroatd' },
         { name: 'CORI', address: 'ban_1tboctbbkyd1b57wabigqdhfadbroszxn4w5gb36axat4r36z3rogosg5gfn' },
+        { name: 'ycolens', address: 'ban_34fx4w735gu114uixh8i9tu5k5fu5aope4b9oruammmgbskp63idejqp47ia' },
+        { name: '@alirezaghamii', address: 'ban_3gnwwto117h8ympp3s4rdzeoo75xw4c76zoijgpieeukdg7uqahyojmbnzn5' },
+        { name: 'milynon9', address: 'ban_196g59sj83n587x4hww9f1nummo47yxb6rpnaacqp5x51ksx5u97sztoo3me' },
+        { name: 'rimo', address: 'ban_3cx4disri36yruddf8kmttz7cgjud781znhmemouoe8ykp4u7aj94wjdzweb' },
+        { name: '@TuChowisito', address: 'ban_38kcpmio9x9398f4haroesc6zk8kqbqeneeq3hwhk9cyrero7mkr387oq8ij' },
       ]
     }
   })
