--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     </div>
   </nav>
   <div class="header">
-    <img src="https://banano.cc/assets/press-assets/banano-icon-w.svg" width="100px" height="100px" style="margin: -15px;">
+    <img src="banano-icon.png" width="100px" height="100px" style="margin: -15px;">
     <div>
       <h1>YELLOW PAGES</h1>
     </div>
