--- a/index.html
+++ b/index.html
@@ -593,6 +593,10 @@
         { name: 'milynon9', address: 'ban_196g59sj83n587x4hww9f1nummo47yxb6rpnaacqp5x51ksx5u97sztoo3me' },
         { name: 'rimo', address: 'ban_3cx4disri36yruddf8kmttz7cgjud781znhmemouoe8ykp4u7aj94wjdzweb' },
         { name: '@TuChowisito', address: 'ban_38kcpmio9x9398f4haroesc6zk8kqbqeneeq3hwhk9cyrero7mkr387oq8ij' },
+        { name: '@BoyBi', address: 'ban_35igeo69y3gy8zea6h7zwwqr1dkfubp99whn6n59ya69sfp4jedp4x5x5ts5' },
+        { name: 'vietcong1312', address: 'ban_1r9d6913k6dypxcftcadkwb57drdrzqwcqx8u7ayxyobftk4dz1njk6cgm4j' },
+        { name: 'Akey', address: 'ban_1y8s6eohix6s8y3xp1a7rdudj81ofsczcq8zpmk186iwggrtxo1qahgquc9p' },
+        { name: 'vietcong1', address: 'ban_3eaescrpec6hukd55dp3ugwrh6w1gu9jx4cx9hcag56uuc4cwz9exdsd9xsm' },
       ]
     }
   })
