--- a/index.html
+++ b/index.html
@@ -597,6 +597,8 @@
         { name: 'vietcong1312', address: 'ban_1r9d6913k6dypxcftcadkwb57drdrzqwcqx8u7ayxyobftk4dz1njk6cgm4j' },
         { name: 'Akey', address: 'ban_1y8s6eohix6s8y3xp1a7rdudj81ofsczcq8zpmk186iwggrtxo1qahgquc9p' },
         { name: 'vietcong1', address: 'ban_3eaescrpec6hukd55dp3ugwrh6w1gu9jx4cx9hcag56uuc4cwz9exdsd9xsm' },
+        { name: '@Fabian1337', address: 'ban_131gurnhgjpimcbyd4qgtxuom4q8mya3yepjimfsiu5z6dneza3cbrunmtze' },
+        { name: '@Fabs#4698', address: 'ban_1q8ujrmzier3mzu6oj3xjfygsub3b81e58tsg6dsi3mytorep1nyzhccdmyq' },
       ]
     }
   })
