--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
         { name: 'vietcong1', address: 'ban_3eaescrpec6hukd55dp3ugwrh6w1gu9jx4cx9hcag56uuc4cwz9exdsd9xsm' },
         { name: '@Fabian1337', address: 'ban_131gurnhgjpimcbyd4qgtxuom4q8mya3yepjimfsiu5z6dneza3cbrunmtze' },
         { name: '@Fabs#4698', address: 'ban_1q8ujrmzier3mzu6oj3xjfygsub3b81e58tsg6dsi3mytorep1nyzhccdmyq' },
+        { name: 'milynon9', address: 'ban_3xsyjduh8cjzon3bzs49mbnrdzipii9x7qngf3z39b98h4hc4i8891jcwact' },
       ]
     }
   })
