--- a/index.html
+++ b/index.html
@@ -600,6 +600,28 @@
         { name: '@Fabian1337', address: 'ban_131gurnhgjpimcbyd4qgtxuom4q8mya3yepjimfsiu5z6dneza3cbrunmtze' },
         { name: '@Fabs#4698', address: 'ban_1q8ujrmzier3mzu6oj3xjfygsub3b81e58tsg6dsi3mytorep1nyzhccdmyq' },
         { name: 'milynon9', address: 'ban_3xsyjduh8cjzon3bzs49mbnrdzipii9x7qngf3z39b98h4hc4i8891jcwact' },
+        { name: '@CatilinaFiol', address: 'ban_19m9dgy8geeqjowzch8ebwjp7omjfhboukeu4yzq6b3fej89aqtpwbxus1xk' },
+        { name: '@consulente', address: 'ban_16wp1r81tktbebi7p4scr68ty56iha18xpiy6p4u13n6tt9rnrch677ywc74' },
+        { name: '@cryptolovee', address: 'ban_3w1uuqgjgxuj1g3efe1pc8w1rcczgq7gzoeyhbenyx4wf3orb4yifrnakyau' },
+        { name: '@hardeem', address: 'ban_3chugsk98eshdcmj33zykw34yfpe11pjcpoyskrprcub3nr5mxdz9owbnqjy' },
+        { name: '@hardeem', address: 'ban_3chugsk98eshdcmj33zykw34yfpe11pjcpoyskrprcub3nr5mxdz9owbnqjy' },
+        { name: '@imshaggy', address: 'ban_1bq8j8cnckqjprpieh3i1ou6mrrp4exx1a3qww3d4d3noqsyi3py1pfe5634' },
+        { name: '@MaxiRo14', address: 'ban_3i3audtajq1bwhqsj64ocxo4bwy6rxjzqtu5tooj5zijquhoj1ccht6e5whs' },
+        { name: '@mcall1106', address: 'ban_1c4sgwaddx4nerxggphd1rf86twtxth96hbhrafhih1cbme79qorqxiis7a7' },
+        { name: '@minato77/jay31#7887/Maspowertaken', address: 'ban_3t4ednmewujsqr76wjnkfwfa7ds4rt1uyq5f8bkoeo33eodhdum9ymyroatd' },
+        { name: '@Promiscus', address: 'ban_1crxh5im1spknft11ztsdks9344ofkdrw336iyxf57hyqdnyzykwxqfwpewn' },
+        { name: '@promiscus', address: 'ban_1crxh5im1spknft11ztsdks9344ofkdrw336iyxf57hyqdnyzykwxqfwpewn' },
+        { name: '@rosi#4493', address: 'ban_1yepsartqg7nx8m9qpm1riekzx9uxbrz48wwshyup7qh3efsj787jsw9esjf' },
+        { name: '@shentran/Nắc#5226/shentran', address: 'ban_3ob6gd8q1yspdcx4woay745mqx9kss8fqk53iebsgz7375n3buogjkms389r' },
+        { name: 'hakkarinen/Mark-SmartCash#0001/blockchainlibrary', address: 'ban_3yhzwd5go547ikum389kwb37x7387xaexjnui19eoje118cw6fu4wdaknt74' },
+        { name: 'hector hernandez', address: 'ban_3byz3f5p5x1pfqoinozuok7u7qedrq1s136b5wabyaro7t5979b5yoboqdip' },
+        { name: 'kaxikus13', address: 'ban_18z91tdj1ys7qp9g6xuxboxu6kbcemin1qds8zox1wpnuz1q7f8wqaoytxso' },
+        { name: 'shaggbanano', address: 'ban_1bq8j8cnckqjprpieh3i1ou6mrrp4exx1a3qww3d4d3noqsyi3py1pfe5634' },
+        { name: 'shaggy', address: 'ban_1bq8j8cnckqjprpieh3i1ou6mrrp4exx1a3qww3d4d3noqsyi3py1pfe5634' },
+        { name: 'shaynegordon', address: 'ban_1b66xnpqse1ybxqpfk9mnsgt87m36ir5zkgratye51g4d3xztzpt43qrif5q' },
+        { name: 'simplesirup', address: 'ban_3epohx5di5btz79ycuthpb9dzsiekq5ipxx6tnp6fhmyhsf7kqda76kjbg8o' },
+        { name: 't.me/afifridwan', address: 'ban_3ykj4xah3k4i76gywdwf14wkddr5u5seb3h8by8hn1etznbh8nyxw7crc63q' },
+        { name: 'trip101', address: 'ban_3q7h973asnfaj5q7eukreszpfg7gsipmibbbu4xxy9tq5ofu7tg6tum4j8dg' },
       ]
     }
   })
