--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
         { name: 'simplesirup', address: 'ban_3epohx5di5btz79ycuthpb9dzsiekq5ipxx6tnp6fhmyhsf7kqda76kjbg8o' },
         { name: 't.me/afifridwan', address: 'ban_3ykj4xah3k4i76gywdwf14wkddr5u5seb3h8by8hn1etznbh8nyxw7crc63q' },
         { name: 'trip101', address: 'ban_3q7h973asnfaj5q7eukreszpfg7gsipmibbbu4xxy9tq5ofu7tg6tum4j8dg' },
+        { name: '@Aliczand', address: 'ban_1c4sgwaddx4nerxggphd1rf86twtxth96hbhrafhih1cbme79qorqxiis7a7' },
       ]
     }
   })
